列出功能表

--- a/test.html
+++ b/test.html
@@ -6,7 +6,10 @@
     </head>
     <body>
             <h1>功能</h1>
-            <h3>狀態</h3>
-            <h3>緊急開鎖</h3><!--按鈕-->
+            <h2>狀態</h2>
+            <h4>是否上鎖</h4>
+            <h4>所剩時間</h4><!--wifi-->
+            <h2>緊急開鎖</h2><!--按鈕-->
+
     </body>
-</html>
+</html> 
